; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_lookup_map_enum.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_lookup_map_enum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8*, i32 }

@GIT_ERROR_CONFIG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"invalid enum value\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_lookup_map_enum(i32* %0, i8** %1, %struct.TYPE_3__* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %7, align 8
  store i8** %1, i8*** %8, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  store i64 0, i64* %12, align 8
  br label %14

14:                                               ; preds = %37, %5
  %15 = load i64, i64* %12, align 8
  %16 = load i64, i64* %10, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %40

18:                                               ; preds = %14
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %20 = load i64, i64* %12, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i64 %20
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %13, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* %11, align 4
  %26 = icmp ne i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %18
  br label %37

28:                                               ; preds = %18
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 8
  %32 = load i32*, i32** %7, align 8
  store i32 %31, i32* %32, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = load i8*, i8** %34, align 8
  %36 = load i8**, i8*** %8, align 8
  store i8* %35, i8** %36, align 8
  store i32 0, i32* %6, align 4
  br label %44

37:                                               ; preds = %27
  %38 = load i64, i64* %12, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %12, align 8
  br label %14

40:                                               ; preds = %14
  %41 = load i32, i32* @GIT_ERROR_CONFIG, align 4
  %42 = call i32 @git_error_set(i32 %41, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %43 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %43, i32* %6, align 4
  br label %44

44:                                               ; preds = %40, %28
  %45 = load i32, i32* %6, align 4
  ret i32 %45
}

declare dso_local i32 @git_error_set(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
